# maemo-sharp

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in
debian/: Makefile.am  changelog  control  copyright  maemo-sharp.install  rules
doc/: Makefile.am  Makefile.in  maemo-sharp-docs.source
doc/en/: Hildon.xml  LibOSSO.xml  Libosso.xml  index.xml
doc/en/Hildon/: AddHomeDialog.xml  App.xml  AppView.xml  CalendarPopup.xml  Caption.xml  CaptionStatus.xml  ColorSelector.xml  ColorSelectorPriv.xml  Controlbar.xml  DateEditor.xml  DateEditorErrorType.xml  DateErrorArgs.xml  DateErrorHandler.xml  EndReachedArgs.xml  EndReachedHandler.xml  FileChooserDialog.xml  FileDetailsDialog.xml  FileHandlingNote.xml  FileSelection.xml  FileSelectionPane.xml  FileSelectionSortKey.xml  FileSelectionVisibleColumns.xml  FileSystemInfo.xml  FileSystemModel.xml  FileSystemModelColumns.xml  FileSystemModelThumbnailCallback.xml  FileSystemSettings.xml  FindToolbar.xml  FontSelectionDialog.xml  GetPasswordDialog.xml  Global.xml  Grid.xml  GridItem.xml  GridItemIconSizeType.xml  GridPositionType.xml  HVolumebar.xml  HildonGtk.xml  IconSizes.xml  InputModeHint.xml  InsertObjectDialog.xml  (+20 more)
doc/en/LibOSSO/: Osso.xml
doc/en/Libosso/: Osso.xml
hildon/: AssemblyInfo.cs.in  hildon-api.raw  hildon-sharp.pc.in  hildon.metadata
libosso/: AssemblyInfo.cs.in  Makefile.am  Makefile.in  Osso.cs  libosso-sharp.dll.config.in  libosso-sharp.pc.in
maemo/: AssemblyInfo.cs.in  Makefile.am  Makefile.in  Osso.cs  maemo-api.raw  maemo-sharp.dll.config  maemo-sharp.dll.config.in  maemo-sharp.pc.in  maemo.metadata
samples/: Banner.cs  BasicSample.cs  CalendarApp.cs  FindBar.cs  HelloWorld.cs  Makefile.am  Makefile.in
sources/: Makefile.am  Makefile.in  hildon-sharp-sources.xml  maemo-sharp-sources.xml
